.provarCaches/00D410000011HE0EAM/objects/rstkf__glfinstmt3__c.object
<CustomObject>
    <description>glfinstmt3__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__glfinstmt3_glfinstmt1__r.rstkf__externalid__c &amp; &apos;_&apos; &amp;  TEXT(rstkf__glfinstmt3_outputseq__c)</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__glfinstmt3_glfinstmt1__r.Name &amp; &apos;-Line-&apos; &amp; TEXT( rstkf__glfinstmt3_lineno__c ) &amp; &apos;-Col-&apos; &amp;  TEXT( rstkf__glfinstmt3_colno__c ) &amp; &apos;-&apos; &amp;  TEXT( rstkf__glfinstmt3_coltype__c )</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt3_blanklineafter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blank Line After</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt3_colhdrlineseq__c</fullName>
        <label>Column Header Line Seq</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt3_colno__c</fullName>
        <label>Column #</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt3_coltype__c</fullName>
        <label>Type of Column Contents</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Raw Number</fullName>
                </value>
                <value>
                    <fullName>Prettified Number</fullName>
                </value>
                <value>
                    <fullName>Column Values</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt3_doubleunderline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Double Underliine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt3_formattednumber__c</fullName>
        <label>Formatted Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt3_glfinstmt1__c</fullName>
        <label>Financial Statement Data - Top Level</label>
        <referenceTo>rstkf__glfinstmt1__c</referenceTo>
        <relationshipLabel>Financial Report Data – Report Lines</relationshipLabel>
        <relationshipName>glfinstmt3s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt3_islinename__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Line Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt3_istitle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Title</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt3_lineno__c</fullName>
        <label>Line #</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt3_outputseq__c</fullName>
        <label>Output Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt3_pagebreakafter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Page Break After</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt3_rawnumber__c</fullName>
        <label>Raw Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt3_singleunderline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Single Underline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt3_textbold__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Copy of GLFSTMPLT4_TEXTBOLD. If true, bold the column zero text.</inlineHelpText>
        <label>Bold Text</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt3_textcontents__c</fullName>
        <label>Column Zero Contents</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt3_textindent__c</fullName>
        <label>Number of text indents</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt3_textitalics__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Copy of GLFSTMPLT4_TEXTITALICS. If true, italicize the column zero text.</inlineHelpText>
        <label>Italics Text</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Financial Report Data – Report Lines</label>
    <listViews>
        <fullName>rstkf__All</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glfinstmt3_outputseq__c</columns>
        <columns>rstkf__glfinstmt3_lineno__c</columns>
        <columns>rstkf__glfinstmt3_colno__c</columns>
        <columns>rstkf__glfinstmt3_textcontents__c</columns>
        <columns>rstkf__glfinstmt3_colhdrlineseq__c</columns>
        <columns>rstkf__glfinstmt3_rawnumber__c</columns>
        <columns>rstkf__glfinstmt3_formattednumber__c</columns>
        <columns>rstkf__glfinstmt3_coltype__c</columns>
        <columns>rstkf__glfinstmt3_textindent__c</columns>
        <columns>rstkf__glfinstmt3_islinename__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Financial_Statement_Data_Report_Lines</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glfinstmt3_glfinstmt1__c</columns>
        <columns>rstkf__glfinstmt3_outputseq__c</columns>
        <columns>rstkf__glfinstmt3_lineno__c</columns>
        <columns>rstkf__glfinstmt3_colno__c</columns>
        <columns>rstkf__glfinstmt3_textcontents__c</columns>
        <columns>rstkf__glfinstmt3_colhdrlineseq__c</columns>
        <columns>rstkf__glfinstmt3_rawnumber__c</columns>
        <columns>rstkf__glfinstmt3_formattednumber__c</columns>
        <columns>rstkf__glfinstmt3_coltype__c</columns>
        <columns>rstkf__glfinstmt3_textindent__c</columns>
        <columns>rstkf__glfinstmt3_islinename__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glfinstmt3_glfinstmt1__c</field>
            <operation>contains</operation>
            <value>a9636000000Nyuu</value>
        </filters>
        <label>Financial Statement Data – Report Lines</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Financial_Statement_Data_Report_Linesjsf</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glfinstmt3_glfinstmt1__c</columns>
        <columns>rstkf__glfinstmt3_outputseq__c</columns>
        <columns>rstkf__glfinstmt3_lineno__c</columns>
        <columns>rstkf__glfinstmt3_colno__c</columns>
        <columns>rstkf__glfinstmt3_textcontents__c</columns>
        <columns>rstkf__glfinstmt3_colhdrlineseq__c</columns>
        <columns>rstkf__glfinstmt3_rawnumber__c</columns>
        <columns>rstkf__glfinstmt3_formattednumber__c</columns>
        <columns>rstkf__glfinstmt3_coltype__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>rstkf__glfinstmt3_textindent__c</columns>
        <columns>rstkf__glfinstmt3_islinename__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>bhongale</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>rstkf__glfinstmt3_glfinstmt1__c</field>
            <operation>equals</operation>
            <value>a961Q000000Frg4</value>
        </filters>
        <label>Financial Statement Data – Report LnJSF</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__SAMB</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glfinstmt3_glfinstmt1__c</columns>
        <columns>rstkf__glfinstmt3_outputseq__c</columns>
        <columns>rstkf__glfinstmt3_lineno__c</columns>
        <columns>rstkf__glfinstmt3_colno__c</columns>
        <columns>rstkf__glfinstmt3_textcontents__c</columns>
        <columns>rstkf__glfinstmt3_colhdrlineseq__c</columns>
        <columns>rstkf__glfinstmt3_rawnumber__c</columns>
        <columns>rstkf__glfinstmt3_formattednumber__c</columns>
        <columns>rstkf__glfinstmt3_coltype__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>rstkf__glfinstmt3_textindent__c</columns>
        <columns>rstkf__glfinstmt3_islinename__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glfinstmt3_glfinstmt1__c</field>
            <operation>contains</operation>
            <value>a9636000000HhyG</value>
        </filters>
        <label>SAMB-Financial Statement – Report Lines</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Report Data – Report Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>